--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Hiren's personal website ♥</title>
+  <title>Hiren's personal website </title>
 </head>
 
 <body>
