--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Hiren's personal website </title>
+  <title>Hiren's personal website ♥</title>
+  <style media="screen">
+    body
+    {
+      background-color: #C2FFF9;
+      color: #009DAE;
+    }
+  </style>
 </head>
-
 <body>
   <table cellspacing='20'>
     <tr>
