--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Hiren's personal website ♥</title>
-  <style media="screen">
-    body
-    {
-      background-color: #C2FFF9;
-      color: #009DAE;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <table cellspacing='20'>
