--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta charset="utf-8">
   <title>Hiren's personal website ♥</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+
 </head>
 <body>
   <table cellspacing='20'>
     <tr>
       <td><img width="200" src="profile-pic.png" alt="Hiren's Pofile picture"></td>
-      <td><h1>Hiren Patel</h1>
+      <td><h1 font-family: 'Montserrat', sans-serif;>Hiren Patel</h1>
       <p> <em>A-<strong>Learner</strong> </em>
       <p>Founder at <strong> <a href="https://twitter.com/BookInfo19">Bookalicious</a> </strong></a></p>
       <p>I am last year computer engineering student. who is much more interested into finance & wanted to do something big in life  </p></td>
